<resources>
    <string name="app_name">Book &amp; Stories Reader</string>
    <string name="banner_id">ca-app-pub-1340962408919470/4865622440</string>
    <string name="intertitial_id">ca-app-pub-1340962408919470/2702509448</string>
    <string name="native_id">ca-app-pub-1340962408919470/5216976230</string>
    <string name="label_welcome">Welcome!</string>
    <string name="label_then_you_should_sign_in_nwe_promise_you_won_t_regret_this">Then you should sign in. \nWe promise you won\'t regret this!</string>
    <string name="button_signin">SignIn</string>
    <string name="button_create_account">Create Account</string>
    <string name="label_by_continuing_you_agree_to_nterms_conditions_and_privacy_policy"><![CDATA[By continuing you agree to\nTerms & Conditions and Privacy Policy]]></string>
    <string name="label_please_sign_in_to_continue">Please Sign in to continue</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_let_s_create_your_profile">Let\'s create your profile</string>
    <string name="hint_name">Name</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="button_code">Code</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_agree_message"><![CDATA[Agree with Terms & conditions and Privacy Policy]]></string>
    <string name="button_signup">SignUp</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_enter_your_registered_email_address_nto_sent_password_reset_link">Enter your registered email address \nto sent password reset link.</string>
    <string name="button_submit">Submit</string>
    <string name="title_notification">Notification</string>
    <string name="title_report">Report</string>
    <string name="title_charge_master_report">Charge Master Report</string>
    <string name="title_list_of_account_closed_jobs">List of Account Closed Jobs</string>
    <string name="title_client_wise_job_count">Client Wise job Count</string>
    <string name="title_list_of_open_jobs">List of Open Jobs</string>
    <string name="title_list_of_account_open_jobs">List of Account Open Jobs</string>
    <string name="hint_search">Search here</string>
    <string name="ahemdabad">Ahemedabad</string>
    <string name="label_julia_robert">Julia Robert</string>
    <string name="title_logout">LOGOUT</string>
    <string name="title_app_version_1_1">App Version 1.1</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_91">+91</string>
    <string name="label_save">Save</string>
    <string name="label_ab_status">AB Status</string>
    <string name="label_shipper">Shipper</string>
    <string name="label_buyer">Buyer</string>
    <string name="label_date">Date</string>
    <string name="label_success">Success!</string>
    <string name="label_success_msg">Your account successfully created. \nThe administrator will verify your profile \nafter that you can login.</string>
    <string name="button_okay">Okay</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_enter_new_password_below_we_re_njust_being_extra_safe">Enter new password below, We\'re \njust being extra safe</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="label_get_in_touch">Get In Touch!</string>
    <string name="label_any_question_send_us_to_message_and_nwe_will_get_back_to_you_shortly">Any question? Send us to message and \nwe will get back to you shortly.</string>
    <string name="hint_title">Title</string>
    <string name="hint_write_your_message">Write your message…</string>
    <string name="label_lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet.</string>
    <string name="label_lorem_ipsum_dolor_sit_amet_consetetur">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod \n\n tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet.</string>
    <string name="label_shipping">Shipping</string>
    <string name="label_car">Car</string>
    <string name="label_container">Container</string>
    <string name="label_plane">Airplane</string>
    <string name="label_aboutus_title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed</string>
    <string name="label_aboutus_description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, \n\nsed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet.</string>
    <string name="label_por">POR</string>
    <string name="label_pol">POL</string>
    <string name="label_pod">POD</string>
    <string name="label_fpod">FPOD</string>
    <string name="label_03_17_20">03/17/20</string>
    <string name="label_mundra">Mundra</string>
    <string name="label_charlestan">Charlestan</string>
    <string name="label_orangeburg">Orangeburg</string>
    <string name="label_weight">Weight</string>
    <string name="label_type">Type</string>
    <string name="label_mbl_mawb_oneyamdv13482700">MBL/MAWB : ONEYAMDV13482700</string>
    <string name="label_hbl_hawb_epgqamd1901629">HBL/HAWB : EPGQAMD1901629</string>
    <string name="label_vessel_flight_vessel_voyage">Vessel/Flight : Vessel/Voyage</string>
    <string name="label_packages_4_pkg">Packages : 4 PKG</string>
    <string name="label_gross_weight_chargeable_weight_1932_9_1932_9">Gross Weight/Chargeable weight : 1932.9/1932.9</string>
    <string name="label_documents">Documents</string>
    <string name="label_activity_status">Activity Status</string>
    <string name="label_activity_milestone">Activity Milestone</string>
    <string name="label_date_completed">Date Completed</string>
    <string name="label_remark_for_activity">Remark for Activity</string>
    <string name="label_track_direct_from_carrier_site">Track Direct from Carrier Site</string>
    <string name="label_https_www_hyperlinkinfosystem_com">https://www.hyperlinkinfosystem.com/</string>
    <string name="label_track_direct_from_clearance_site">Track Direct from Clearance site</string>
    <string name="label_what_s_app">What\'s app</string>
    <string name="dummy_ben_silver">The Ben Sliver Corporation</string>
    <string name="dummy_b_c_industries">B C Industries</string>
    <string name="dummy_cancel">Cancel</string>
    <string name="validation_please_enter_email_address">Please enter email address</string>
    <string name="validation_valid_email_adress">Please enter valid email address</string>
    <string name="validation_enter_email">Please enter email</string>
    <string name="validation_password">Please enter password</string>
    <string name="validation_valid_email">Please enter valid email</string>
    <string name="validation_confirm_password">Please enter confirm password</string>
    <string name="validation_match_password">Please enter match password</string>
    <string name="validation_terms_condition_privacy_policy"><![CDATA[please agree terms & conditions and privacy policy]]></string>
    <string name="validation_name">Please enter name</string>
    <string name="validation_company_name">Please enter company name</string>
    <string name="validation_mobile_number">Please enter mobile number</string>
    <string name="validation_min_ten_digit_mobile_number">Please enter minimum 10 digit mobile number</string>
    <string name="spannable_etd">ETD : %1$s</string>
    <string name="spannable_eta">ETA : %1$s</string>
    <string name="spannable_shipper_ref">Shipper Ref : %1$s</string>
    <string name="spannable_current_status">Current status : %1$s</string>
    <string name="title_about_us">About Us</string>
    <string name="title_text_recognize">Image Text Recognized</string>
    <string name="title_list_of_acc_open_jobs">List of Account Open Jobs</string>
    <string name="dummy_initilized">Initiated</string>
    <string name="validation_current_password">Please enter current password</string>
    <string name="validation_valid_current_password">Please enter valid current password</string>
    <string name="validation_new_password">Please enter new password</string>
    <string name="validation_valid_new_password">Please enter valid new password</string>
    <string name="title_faqs">FAQ\'s</string>
    <string name="validation_title">Please enter title</string>
    <string name="validation_message">Please enter message</string>
    <string name="title_home">Home</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="setting_view_right">View Rights</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="title_rate_app">Rate The App</string>
    <string name="title_share_app">Share App</string>
    <string name="title_order_details">Playing.....</string>
    <string name="spannable_Mbl">MBL/MAWB : %1$s</string>
    <string name="spannable_Hbl">HBL/HAWB : %1$s</string>
    <string name="spannable_vessel">Vessel/Flight : %1$s</string>
    <string name="spannable_packages">Packages : %1$s</string>
    <string name="spannable_gross">Gross Weight/Chargeable weight : %1$s</string>
    <string name="label_book_reader">Book Reader</string>
    <string name="label_book_reader_subtitle">Get Advanced\n Read Your Book with technology</string>
    <string name="title_settings">Settings</string>
    <string name="app_updated" translatable="false">App updated</string>
    <string name="label_please_select_image">Please select image</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_camera">Camera</string>
    <string name="text_not_available">Text Not Available</string>
    <string name="title_to_file">Title to File</string>
    <string name="description_eg_page_no">Description (eg. page no)</string>
    <string name="submit_to_speech">Submit to Speech</string>
    <string name="translate">translate</string>
    <string name="username" translatable="false">UserName</string>
    <string name="enter_username" translatable="false">Enter username</string>
    <string name="password" translatable="false">password</string>
    <string name="enter_password" translatable="false">Enter password</string>
    <string name="login" translatable="false">Login</string>
</resources>