<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSettingsTitle"
        style="@style/AppTheme.AppTextView.Black.InterSemi16.SettingItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:id="@+id/layout_expandable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSettingsTitle">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxShipping"
            style="@style/AppTheme.AppTextView.InterMediumGrey12.CheckboxAgree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shipping" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxCar"
            style="@style/AppTheme.AppTextView.InterMediumGrey12.CheckboxAgree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_car" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxContainer"
            style="@style/AppTheme.AppTextView.InterMediumGrey12.CheckboxAgree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_container" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxAirPlane"
            style="@style/AppTheme.AppTextView.InterMediumGrey12.CheckboxAgree2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_plane"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_expandable"
        android:src="@drawable/divider_line"/>
</androidx.constraintlayout.widget.ConstraintLayout>