<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewStatus"
            style="@style/table_row_item.AccountOpen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_ab_status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewShipper"
            style="@style/table_row_item.AccountOpen"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/label_shipper" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewBuyer"
            style="@style/table_row_item.AccountOpen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_buyer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDate"
            style="@style/table_row_item.AccountOpen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_date" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOpenJobs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_container"
        tools:listitem="@layout/account_open_jobs_table_item" />

</androidx.constraintlayout.widget.ConstraintLayout>