<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCreateAccount"
            style="@style/AppTheme.AppTextView.Black.InterBold.24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_create_account"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCreateProfile"
            style="@style/AppTheme.AppTextView.InterMediumGrey12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_let_s_create_your_profile"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateAccount" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/AppTheme.EditTextInputLayout"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_name"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateProfile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextName"
                style="@style/AppTheme.AppEditText"
                android:inputType="textPersonName|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCompanyName"
            style="@style/AppTheme.EditTextInputLayout"
            android:hint="@string/hint_company_name"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextCompanyName"
                style="@style/AppTheme.AppEditText"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCountryCode"
            style="@style/AppTheme.AppButton.CountryButton"
            android:text="@string/button_code"
            app:icon="@drawable/ic_country_down"
            app:iconGravity="textEnd"
            app:layout_constraintBaseline_toBaselineOf="@id/textInputLayoutMobileNo"
            app:layout_constraintStart_toStartOf="@id/guideLineStart" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMobileNo"
            style="@style/AppTheme.EditTextInputLayout"
            android:layout_marginStart="8dp"
            android:hint="@string/hint_mobile_number"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toEndOf="@id/buttonCountryCode"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCompanyName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextMobileNo"
                style="@style/AppTheme.AppEditText"
                android:inputType="phone"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailAddress"
            style="@style/AppTheme.EditTextInputLayout"
            android:hint="@string/hint_email_address"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutMobileNo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextEmailAddress"
                style="@style/AppTheme.AppEditText"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/AppTheme.EditTextInputLayout"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmailAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextPassword"
                style="@style/AppTheme.AppEditText"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            style="@style/AppTheme.EditTextInputLayout"
            android:hint="@string/hint_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextConfirmPassword"
                style="@style/AppTheme.AppEditText"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxAgree"
            style="@style/AppTheme.AppTextView.InterMediumGrey12.CheckboxAgree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutConfirmPassword"
            tools:text="@string/label_agree_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            style="@style/AppTheme.AppButton.OrangeBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/button_signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxAgree"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>