<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="28dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/inter_regular"
        android:padding="10dp"
        android:text="@string/label_please_select_image"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/inter_regular"
        android:padding="18dp"
        android:text="@string/label_gallery"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/inter_regular"
        android:padding="18dp"
        android:text="@string/label_camera"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
</LinearLayout>
